--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ description = "A tool to censor sensitive data"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "faker>=30.4.0",
     "validate-docbr>=1.10.0",
 ]
 classifiers = [
@@ -26,5 +25,7 @@ build-backend = "hatchling.build"
 
 [tool.uv]
 dev-dependencies = [
+    "black>=24.10.0",
     "coverage>=7.6.3",
+    "faker>=30.6.0",
 ]
