--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,4 +28,11 @@ dev-dependencies = [
     "black>=24.10.0",
     "coverage>=7.6.3",
     "faker>=30.6.0",
+    "mkdocs-material>=9.5.41",
+    "mkdocs>=1.6.1",
+    "mkdocstrings-python>=1.12.1",
+    "mkdocstrings>=0.26.2",
 ]
+
+[tool.black]
+line-length = 88
