--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ description = "A tool to censor sensitive data"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "rich>=13.9.2",
+    "typer>=0.12.5",
     "validate-docbr>=1.10.0",
 ]
 classifiers = [
@@ -36,3 +38,6 @@ dev-dependencies = [
 
 [tool.black]
 line-length = 88
+
+[project.scripts]
+anonymize = "anonymizer.cli:app"
