--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ dev-dependencies = [
     "black>=24.10.0",
     "coverage>=7.6.3",
     "faker>=30.6.0",
+    "jinja2>=3.1.4",
+    "mkdocs-macros-plugin>=1.3.6",
     "mkdocs-material>=9.5.41",
     "mkdocs>=1.6.1",
     "mkdocstrings-python>=1.12.1",
